[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'domainck'
version = '1.1.1'
description = "Domain WHOIS checker"
readme = "README.md"
authors = [
  { name = 'Tim Parenti', email = 'timparenti@gmail.com' }
]
requires-python = '>=3.11'
dependencies = [
  'python-whois ~= 0.9.5', # https://github.com/richardpenman/whois
  'GitPython ~= 3.1.45' # https://github.com/gitpython-developers/GitPython
]

[project.urls]
repository = "https://github.com/timparenti/domainck"

[tool.setuptools]
# Use automatic discovery
